--- a/package.json
+++ b/package.json
@@ -23,32 +23,21 @@
     "clean": "yarn gulp clean"
   },
   "devDependencies": {
-    "@types/gulp": "^4.0.10",
-    "@types/node": "^20.7.0",
     "browser-sync": "^2.29.1",
     "del": "^7.0.0",
-    "dotenv": "^16.0.3",
     "gulp": "^4.0.2",
-    "gulp-cache": "^1.1.3",
     "gulp-cli": "^2.2.0",
     "gulp-cssimport": "^7.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-tap": "^2.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "jest": "^29.5.0",
+    "prince": "^1.9.14",
     "pug": "^3.0.2",
-    "puppeteer": "^21.3.5",
-    "sass": "^1.62.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "sass": "^1.62.0"
   },
   "dependencies": {
     "luxon": "^3.3.0",
-    "resume-cli": "2.2.4",
-    "tinycolor": "^0.0.1"
+    "resume-cli": "2.2.4"
   }
 }
